# emailSender

./: .gitignore  README.md  config.py  database.py  email_template.html  main.py  models.py  pyproject.toml
